# app-services

./: .gitignore  README.md
mojomail/common/: .project  CMakeLists.txt  Makefile  Makefile.Ubuntu  Makefile.inc  README.md  gtest.sh
mojomail/common/files/pkgconfig/: email-common.pc.in
mojomail/common/inc/: CommonDefs.h  CommonErrors.h  CommonMacros.h  CommonPrivate.h
mojomail/common/inc/activity/: Activity.h  ActivityBuilder.h  ActivityParser.h
mojomail/common/inc/async/: AsyncFlowControl.h  AsyncIOChannel.h  AsyncInputStream.h  AsyncOutputStream.h  AsyncReader.h  AsyncWriter.h  FileCacheResizerOutputStream.h
mojomail/common/inc/client/: BaseSyncSession.h  BusClient.h  Command.h  CommandManager.h  DbMergeProxy.h  FileCacheCleaner.h  FileCacheClient.h  PowerUser.h  SyncStateUpdater.h
mojomail/common/inc/data/: CommonData.h  DatabaseAdapter.h  Email.h  EmailAccountAdapter.h  FolderAdapter.h  SyncState.h  SyncStateAdapter.h
mojomail/common/inc/email/: AsyncEmailParser.h  AsyncEmailWriter.h  BufferedEmailParser.h  CharsetSupport.h  DateUtils.h  EmailWriter.h  HtmlEntities.h  MimeHeaderWriter.h  Rfc2047Decoder.h  Rfc2047Encoder.h
mojomail/common/inc/exceptions/: Backtrace.h  ExceptionUtils.h  GErrorException.h  MailErrorException.h  MojErrException.h
mojomail/common/inc/glibcurl/: glibcurl.h
mojomail/common/inc/mimeparser/: EmailHeaderFieldParser.h  Rfc822Tokenizer.h
mojomail/common/inc/network/: CurlConnection.h  CurlSSLVerifier.h  HttpConnection.h  NetworkStatusMonitor.h  SocketConnection.h
mojomail/common/inc/stream/: Base64DecoderOutputStream.h  Base64OutputStream.h  BaseInputStream.h  BaseOutputStream.h  ByteBufferOutputStream.h  DebugOutputStream.h  DeflaterOutputStream.h  LineReader.h  QuotePrintableDecoderOutputStream.h  QuotedPrintableEncoderOutputStream.h  UTF8DecoderOutputStream.h
mojomail/common/inc/util/: Hexdump.h  LogUtils.h  StringUtils.h  Timer.h
mojomail/common/src/: CommonErrors.cpp
mojomail/common/src/activity/: Activity.cpp  ActivityBuilder.cpp  ActivityParser.cpp  ActivitySet.cpp
mojomail/common/src/async/: AsyncBuffer.cpp  AsyncFlowControl.cpp  AsyncIOChannel.cpp  AsyncInputStream.cpp  AsyncOutputStream.cpp  AsyncReader.cpp  AsyncWriter.cpp  FileCacheResizerOutputStream.cpp  GIOChannelWrapper.cpp
mojomail/common/src/client/: BaseSyncSession.cpp  BusClient.cpp  Command.cpp  CommandManager.cpp  DbMergeProxy.cpp  FileCacheCleaner.cpp  FileCacheClient.cpp  PowerManager.cpp  PowerUser.cpp  SyncStateUpdater.cpp
mojomail/common/src/data/: DatabaseAdapter.cpp  Email.cpp  EmailAccount.cpp  EmailAccountAdapter.cpp  EmailAdapter.cpp  EmailAddress.cpp  EmailPart.cpp  EmailSchema.cpp  Folder.cpp  FolderAdapter.cpp  SyncState.cpp  SyncStateAdapter.cpp
mojomail/common/src/email/: AsyncEmailParser.cpp  AsyncEmailWriter.cpp  BufferedEmailParser.cpp  CharsetSupport.cpp  DateUtils.cpp  EmailWriter.cpp  HtmlEntities.cpp  MimeHeaderWriter.cpp  PreviewTextGenerator.cpp  Rfc2047Decoder.cpp  Rfc2047Encoder.cpp
mojomail/common/src/exceptions/: Backtrace.cpp  CurlException.cpp  ExceptionUtils.cpp  GErrorException.cpp  MailErrorException.cpp  MailException.cpp  MojErrException.cpp
mojomail/common/src/glibcurl/: glibcurl.cpp
mojomail/common/src/mimeparser/: EmailHeaderFieldParser.cpp  MimeEmailParser.cpp  Rfc822Tokenizer.cpp
mojomail/common/src/network/: CurlConnection.cpp  CurlSSLVerifier.cpp  HttpConnection.cpp  NetworkStatus.cpp  NetworkStatusMonitor.cpp  SocketConnection.cpp
mojomail/common/src/stream/: Base64DecoderOutputStream.cpp  Base64OutputStream.cpp  BaseInputStream.cpp  ByteBuffer.cpp  CounterOutputStream.cpp  DebugOutputStream.cpp  DeflaterOutputStream.cpp  InflaterInputStream.cpp  LineReader.cpp  PreviewTextExtractorOutputStream.cpp  QuotePrintableDecoderOutputStream.cpp  QuotedPrintableEncoderOutputStream.cpp  UTF8DecoderOutputStream.cpp
mojomail/common/src/util/: Hexdump.cpp  LogUtils.cpp  ObjectTracker.cpp  StringUtils.cpp
mojomail/common/test/: GTestMain.cpp
mojomail/common/test-shared/: MockDoneSlot.h  TestUtils.h
mojomail/common/test-shared/client/: MockBusClient.cpp  MockBusClient.h  MockFileCacheService.cpp  MockFileCacheService.h  MockRemoteService.cpp  MockRemoteService.h
mojomail/common/test-shared/stream/: MockStreams.h
mojomail/common/test/activity/: ActivitySetTest.cpp  ActivityTest.cpp  MockActivityService.cpp  MockActivityService.h
mojomail/common/test/client/: CommandManagerTest.cpp
mojomail/common/test/data/: FolderAdapterTest.cpp
mojomail/common/test/email/: AsyncEmailWriterTest.cpp  BufferedEmailParserTest.cpp  MimeHeaderWriterTest.cpp  MockAsyncIOChannel.cpp  MockAsyncIOChannel.h  PreviewTextGeneratorTest.cpp  Rfc2047DecoderTest.cpp  Rfc2047EncoderTest.cpp
mojomail/common/test/mimeparser/: EmailHeaderFieldParserTest.cpp  MimeEmailParserTest.cpp  Rfc822TokenizerTest.cpp
mojomail/imap/: .project  CMakeLists.txt  Makefile  Makefile.Ubuntu  Makefile.inc  README.md
mojomail/imap/GrammarAnalyzer/: .project  build.xml
mojomail/imap/inc/: ImapBusDispatcher.h  ImapClient.h  ImapConfig.h  ImapCoreDefs.h  ImapPrivate.h  ImapServiceApp.h  ImapStatus.h  ImapValidationListener.h  ImapValidator.h
mojomail/imap/inc/client/: Capabilities.h  (+7 more)
mojomail/imap/service/: com.palm.imap.json.prv  com.palm.imap.service.prv
mojomail/imap/src/: ImapBusDispatcher.cpp  ImapClient.cpp  ImapConfig.cpp  ImapServiceApp.cpp  ImapValidator.cpp
mojomail/imap/test/: GTestMain.cpp  MockTestSetup.cpp  MockTestSetup.h
mojomail/smtp/: .cproject  .project  CMakeLists.txt  Makefile  Makefile.Ubuntu  Makefile.inc  README.md
mojomail/smtp/inc/: PowerManager.h  SmtpBusDispatcher.h  SmtpClient.h  SmtpCommon.h  SmtpConfig.h  SmtpPowerManager.h  SmtpServiceApp.h  SmtpSimpleSender.h  SmtpValidationListener.h  SmtpValidator.h
mojomail/smtp/service/: com.palm.smtp.json.prv  com.palm.smtp.service.prv
mojomail/smtp/src/: SmtpBusDispatcher.cpp  SmtpClient.cpp  SmtpConfig.cpp  SmtpPowerManager.cpp  SmtpServiceApp.cpp  SmtpSimpleSender.cpp  SmtpValidator.cpp
mojomail/smtp/test/: CRLFTerminatedOutputStreamTest.cpp  GTestMain.cpp
(+650 files in other folders)
